objects/Gong__Note__c.object
<CustomObject>
    <fields>
        <fullName>Gong__Comment__c</fullName>
        <label>Comment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gong__Commentor__c</fullName>
        <formula>Owner:User.LastName &amp; &quot;, &quot; &amp; Owner:User.FirstName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Commentor</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gong__Gong_Interaction__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Gong Conversation</label>
        <referenceTo>Gong__Gong_Call__c</referenceTo>
        <relationshipLabel>Notes</relationshipLabel>
        <relationshipName>Notes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Gong__Point_in_Time__c</fullName>
        <label>Point in Time</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Gong__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Comment</fullName>
                </value>
                <value>
                    <fullName>Note</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Note</label>
    <nameField>
        <label>Note Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Notes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>